err/oldowan.mitomotifs-cmdline.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/oldowan'...
Listing './lib/python3.5/site-packages/oldowan/fasta'...
Listing './lib/python3.5/site-packages/oldowan/mitomotifs'...
Listing './lib/python3.5/site-packages/oldowan/mitomotifs/biopython'...
Compiling './lib/python3.5/site-packages/oldowan/mitomotifs/biopython/listfns.py'...
***   File "./lib/python3.5/site-packages/oldowan/mitomotifs/biopython/listfns.py", line 39
    except TypeError, x:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/oldowan/mitomotifs/biopython/pairwise2.py'...
***   File "./lib/python3.5/site-packages/oldowan/mitomotifs/biopython/pairwise2.py", line 147
    raise AttributeError, "function should be globalXX"
                        ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/oldowan/mitomotifs/seq2sites.py'...
***   File "./lib/python3.5/site-packages/oldowan/mitomotifs/seq2sites.py", line 183
    raise Exception, "too many N's in submitted sequence"
                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/oldowan/mitomotifs/sites2seq.py'...
***   File "./lib/python3.5/site-packages/oldowan/mitomotifs/sites2seq.py", line 111
    raise Exception, msg
                   ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/oldowan/mitomotifs_cmdline'...
Compiling './lib/python3.5/site-packages/oldowan/mitomotifs_cmdline/seq2sites.py'...
***   File "./lib/python3.5/site-packages/oldowan/mitomotifs_cmdline/seq2sites.py", line 40
    print 'You must provide a filename!'
                                       ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/oldowan/mitomotifs_cmdline/sites2seq.py'...
***   File "./lib/python3.5/site-packages/oldowan/mitomotifs_cmdline/sites2seq.py", line 40
    print 'You must provide a filename!'
                                       ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/oldowan.fasta-1.0.4.egg-info'...
Listing './lib/python3.5/site-packages/oldowan.mitomotifs-1.0.2.egg-info'...
Listing './lib/python3.5/site-packages/oldowan.mitomotifs_cmdline-1.0.0.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
